Fixes breadcrumb alignments while profile img exists

--- a/scss/_interface.scss
+++ b/scss/_interface.scss
@@ -161,7 +161,7 @@ header {
             color: $white;
         }
         // Fixes user own pages because of img size.
-        .userinitials.size-100 {
+        .userinitials.size-100, .userpicture {
             width: 60px;
             height: 60px;
             font-size: 1.6rem;
